--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Planets are connected in a node-based graph.
 Teams compete for control of these planets by playing games of Starcraft 2.  
 Team captains are responsible for logging in to the Battlefork website and issuing commands for the round of play.  
 When all commands are entered, the map updates with all player movements.  
-Any opposing players sent to the same planet must play a game of Starcraft 2 to determine who will control the planet for the following week.
+Any opposing players sent to the same planet must play a game of Starcraft 2 to determine who will control the planet for the following round.
 Play continues until only one team remains in control of their own home planet.
 
 Detailed rules can be found in doc/battlefork-rules.txt. Specification docs can be found in doc/
